# recycling_sim

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
configs/: conveyor_demo.json  dense_mrf_process_line.json  edco_conveyor_segment_a.json  recycling_facility_large_v2.json
scripts/: curate_static_frames.py  export_plan_viz.py  run_conveyor.py  run_conveyor_isaac.sh
src/recycling_mrf/: __init__.py  cli.py  config.py  geometry.py  isaac_runner.py  plan_viz.py  scenario.py  scene.py
tests/: test_config.py  test_scenario.py
