[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recycling-mrf"
version = "0.1.0"
description = "Config-driven conveyor simulation scaffold for an MRF workflow in Isaac Sim."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Codex" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
